# scrapy-playwright

./: .env  .gitignore  LICENSE  README.md  __init__.py  configure_firewall.sh  pyproject.toml  requirements.txt  scrapy.cfg  setup.py  setup_guide.txt
scraper_bot/: README.md  app.py  error_handler.py  middlewares.py  models.py  onion_settings.py  output.json  pipelines.py  scrapy.cfg  settings.py  setup_guide.txt  tasks.py
scraper_bot/scraper_bot/: Gay_Community_results.json  app.py  items.py  middlewares.py  onion_settings.py  pipelines.py  run_multiple_searches.py  settings.py
scraper_bot/scraper_bot/spiders/: bing_spider.py  keyword_spider.py  onion_spider.py
scraper_bot/scraper_bot/templates/: index.html  result.html
scraper_bot/spiders/: base_spider.py  bing_spider.py  duckduckgo_spider.py  google_spider.py  keyword_spider.py  onion_spider.py
scraper_bot/templates/: base.html  index.html  result.html  results.html
scraper_bot/utils/: cache_manager.py  error_handler.py  progress_tracker.py  proxy_config.py  proxy_helper.py  result_processor.py  test_scraper.py  tor_manager.py
scrapy_playwright/: _utils.py  handler.py  page.py
