
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[project]
name = "scrapy_playwright"
version = "0.1.0"
description = "A web scraper using Scrapy and Playwright"
authors = ["Your Name <you@example.com>"]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "scrapy>=2.5.1",
    "playwright>=1.12.0",
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.1",
    "lxml>=4.6.3"
]
